prevent table overflow in docs

--- a/src/robot/htmldata/common/doc_formatting.css
+++ b/src/robot/htmldata/common/doc_formatting.css
@@ -14,6 +14,8 @@
     border-collapse: collapse;
     empty-cells: show;
     font-size: 0.9em;
+    overflow-y: scroll;
+    display: block;
 }
 .doc table th, .doc table td {
     border: 1px solid #ccc;
